trying to fix scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,12 +9,23 @@ body {
 }
 
 
-.scrollable-content::-webkit-scrollbar {
-    width:30px; 
-  }
-  .scrollable-content::-webkit-scrollbar * {
-    background:transparent; 
-  }
-  .scrollable-content::-webkit-scrollbar-thumb {
-    background:rgba(255,0,0,0.1) !important; 
-  }
+/* The scrollbar track */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888; 
+    border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+}
+
+/* Hide scrollbar for Webkit browsers */
+body::-webkit-scrollbar {
+    display: none;
+}
